k8s/services/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: webstaurator
spec:
  selector:
    app: payment-service
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
